assets/css/main.css
/*Font has been imported from Google Fonts. Source: [https://fonts.google.com/specimen/Montserrat?category=Sans+Serif,Display#standard-styles]*/
@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Permanent+Marker&family=Roboto&family=Rock+Salt&display=swap');

/*SITE SETTINGS*/
/*
Reference Material: [codeSTACKr] 
*/

* {
	margin: 0; 
	padding: 0;
	box-sizing: border-box; 
	font-family: 'Roboto', sans-serif;	
}

/*CONTAINER*/
/*
Reference Material: 
YouTubers - [codeSTACKr, A. Delise, Florin Pop] 
*/

.main-cont {
	display: grid;
	height:  auto;
	grid-gap: 1rem;
	grid-template-columns: repeat(3,1fr);
	grid-template-rows: auto;
	grid-template-areas:
	"nav nav nav"
	"main main main"
	"box1 box2 box3"
	"footer footer footer";
}  

body {
	color: rgba(93, 93, 93);
	height: 100vh;
}

h1, h2, h3, h4 {
	font-family: 'Montserrat', sans-serif; 
	padding: 10px;
}

a {
	text-decoration: none;
	color: rgb(90, 87, 87, .8);
	font-family: 'Montserrat', sans-serif;
}

button {
	text-decoration: none;
	color: rgb(90, 87, 87, .8);
	font-family: 'Montserrat', sans-serif;
}

nav {
	grid-area: nav; 
	box-shadow: 0 5px 5px 0 rgb(128, 128, 128, .5);
	background-color: rgb(144, 24, 241); 
	display: flex;
	/*flex-wrap property impacts the nave bar, do not remove*/
	flex-wrap: wrap;
}

#bamisoro-logo {
	width: 200px;
	height: 200px;
	margin: 20px;
}

#bamisoro-logo:hover {
	width: 250px;
	height: 250px;
}

main {
	grid-area: main; 
	padding: 10px;
}

.box1 {
	grid-area: box1; 
	padding: 10px;
} 

.box2 {
	grid-area: box2; 
	padding: 10px;	
} 

.box3 {
	grid-area: box3; 
	padding: 10px;
} 

footer {
	grid-area: footer;
	padding: 10px;
	margin-top: 20px;
	background-color: rgb(144, 24, 241); 
}

.footer-links {
	float: right;
	font-size: 50px;
	padding: 10px;
}

.footer-links > a {
	position: relative;
	top: -40px;
	font-size: 30px;
	padding: 10px;
	color: rgb(255, 255, 255);
}

.footer-links > a:hover {
	text-shadow: 4px 4px 4px rgb(93, 93, 93, .5);
	font-size: 50px;
}

.logo-footer {
	width: 150px;
	height: 150px;
}

/*ENTER SITE PAGE*/
/* Reference Material: 
Box Shadow - [https://www.w3schools.com/css/css3_shadows.asp]
Center object in div - [https://www.freecodecamp.org/news/how-to-center-anything-with-css-align-a-div-text-and-more/]
*/

#background {
	background-color: rgb(144, 24, 241); 
	height: 100vh;
}

#enter-bamisoro-logo {
	margin: 10px;
	width: 500px;
	height: 500px;
	margin-right:auto;
	margin-left: auto;
	display: block;	
}

#enter-bamisoro-logo:hover {
	width: 550px;
	height: 550px;
}

#enter-site-space {
	position: relative;
	display: block;
}

.enter-site-btn {
	width: 270px;
	height: 50px;
	font-family: 'Montserrat', sans-serif;
	font-size: 27px;
	font-weight: 700;
	background-color: rgb(255, 255, 255);
	border: 4px solid rgb(0, 0, 0);
	border-radius: 70px; 
	/*this property is dependant on position value of parent element see above*/
	position: absolute; 
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	display: inline-block;
	margin-top: 30px;
}

.enter-site-btn:hover {
	box-shadow: 5px 5px 5px rgb(90, 87, 87, .5);
}

.enter-site-btn > a:hover {
	color: rgb(239, 130, 62);
}

/*MENU*/
.nav-MU {
	padding: 0 60px;
}

.nav-MU > li {
	display: table-cell;
	float: left;
	font-size: 25px;
	padding: 20px;
	line-height: 200px;
}

.nav-MU > li > a {
	color:  rgb(255, 255, 255);
}

.nav-MU > li:hover {
	font-size: 30px;
	color:  rgb(255, 255, 255);
	text-decoration: solid underline;
}

.ham {
	background-color: transparent;
	color: rgb(255, 255, 255);
	font-size: 30px;
	border: 0;
	cursor: pointer;
	/*ensures hamburger icon does not appear on screens > 768px*/
	display: none; 
}

/*QUIZ HOMEPAGE*/
section {
	margin: 20px;
	padding: 30px;
	text-align: center;
	display: block;
	border-radius: 20px;
	background-color: rgb(93, 93, 93, .1);
}

section:hover {
	box-shadow: 9px 9px 9px rgb(144, 24, 241, .5); 
}

#what-we-offer > h1 {
	color: rgb(239, 130, 62);
}

#what-we-offer > p {
	margin-top: 20px;
}

#what-we-offer > h3 {
	margin-top: 5px;
	margin-bottom: 15px;
	margin-right: auto;
	margin-left: 1px;
	display: inline-block;
	position: relative;
	top: -10px;
}

#what-we-offer > a {
	display: inline-block;
	font-size: 50px;
	padding: 20px;
	margin-top: 10px;
	margin-bottom: 10px;
	margin-right: auto;
	margin-left: auto;
	color: rgb(239, 130, 62);
} 

#what-we-offer > a:hover {
	text-shadow: 5px 5px 5px rgb(90, 87, 87, .5);
	font-size: 60px;
} 

.quiz-lp {
	padding: 30px;
}

.quiz-lp > h1, h3 {
	color: rgb(239, 130, 62);
	padding: 10px;
}

.quiz-lp > p > a {
	color: rgb(239, 130, 62);
	font-weight: 700;
}

.quiz-lp > p > strong  {
	color: rgb(239, 130, 62);
}

.quiz-lvl-boxes {
	display: flex;
	justify-content: center;
}

.quiz-lvl-logo {
	width: 300px;
	height: 300px;
	margin: 20px;
}

.quiz-lvl-logo:hover {
	width: 350px;
	height: 350px;
}

/*QUIZ - GENERAL*/
.quiz-cont > section {
	box-shadow: 9px 9px 9px rgb(144, 24, 241, .5); 
}

.quiz-cont > h3 {
	color: rgb(239, 130, 62);
	margin-bottom: 30px;
}

#game > h2 {
	padding: 10px;
	color: rgb(239, 130, 62);
	margin-bottom: 30px;
	margin-bottom: 30px;
}

#tracker {
 display: inline-block;
 text-align: center;
 margin-top: 20px;
}

#tracker > h2 >  span {
	margin-left: 15px;
	margin-right: 15px;
	color: rgb(239, 130, 62);
}

/*BEGGINER QUIZ*/
/*
Reference material: 
* J. Q. Quick, 2019 [https://youtube.com/playlist?list=PLDlWc9AfQBfZIkdVaOQXi1tizJeNJipEx]
* Code Institute|JavaScript Challenge 45: [https://learn.codeinstitute.net/courses/course-v1:CodeInstitute+LMR101+2021_T1/courseware/0a4bf408d10c4149bb686457ac11edf6/37e3becd93804fdf8bf586523f56ead5/]
*/

.quiz-cont {
	display: block;
	text-align: center;
	margin: 60px 60px;
}	

#beginnerqs {
	padding: 10px;
	color: rgb(239, 130, 62);
	font-size: 30px;
	margin-top: 25px;
	margin-bottom: 15px;
}	

.option-cont {
	display: inline-block; 
	margin-bottom: 20px;
}	
/* ... */

